--- a/day 51/homework/day51hw.html
+++ b/day 51/homework/day51hw.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="day51hw.js">
+    <link rel="stylesheet" href="day51hw2.js">
 </head>
 <body>
     <script>
-        console.log("tatli bozhadze")
-        alert("tatuli bozhadze")
+    console.log(45+70)
+    console.log(130-70)
+    console.log(5*35)
+    console.log(80/3)
+    console.log(89+71)
+    console.log(47-17)
+    console.log(4*40)
+    console.log(45/3)
+    console.log(80+37)
+    console.log(99-47)
+    alert(45+70)
+    alert(130-70)
+    alert(5*35)
+    alert(80/3)
+    alert(89+71)
+    alert(47-17)
+    alert(4*40)
+    alert(45/3)
+    alert(80+37)
+    alert(99-47)
     </script>
+    
+</script>
 </body>
 </html>
